Fixed blue line & date/time alignment

--- a/src/scss/option-restrooms.scss
+++ b/src/scss/option-restrooms.scss
@@ -123,7 +123,7 @@
     /* For mobile phones: */
     .restrooms-header { flex-direction: column; 
         .restroom-headleft { height: auto; }
-        .restrooms-title { float: bottom; 
+        .restrooms-title { align-self: center; 
             #title-regular { font-size: 2.5rem; }}}
     .restrooms-divider { margin-left: 0; }
     // .restrooms-header :nth-child(1) {order: 2;}
